package 创建型模式.工厂方法模式;

public interface LoggerFactory {
    public Logger createLogger();
}
