@startuml
'https://plantuml.com/class-diagram

interface LoggerFactory{
+ createLogger() : Logger
}
interface Logger{
+ writeLog() : void
}
class FileLoggerFactory{
+ createLogger() : Logger
}
class DatabaseLoggerFactory{
+ createLogger() : Logger
}
class FileLogger{
+ writeLog() : void
}
class DatabaseLogger{
+ writeLog() : void
}
class Client{

}
Client ..> LoggerFactory
Client ..> Logger
FileLoggerFactory ..|> LoggerFactory
DatabaseLoggerFactory ..|> LoggerFactory
FileLogger ..|> Logger
DatabaseLogger ..|> Logger
FileLoggerFactory ..> FileLogger : create
DatabaseLoggerFactory ..> DatabaseLogger : create
@enduml